.antlr/PromptDSLParser.java
// Generated from d:/work/promptDSL/PromptDSL.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PromptDSLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, PLUS=17, 
		JAVASCRIPT_BLOCK=18, STRING_TYPE=19, FLOAT_TYPE=20, INT_TYPE=21, PROMPT=22, 
		PARAMS=23, SYSTEM=24, USER=25, NOTE=26, IN=27, OUTPUT=28, FORMAT=29, TYPE=30, 
		STRUCT=31, SCHEMA=32, AFTER=33, ID=34, STRING=35, NUMBER=36, BOOL=37, 
		PIPE=38, SEMI=39, WS=40, LINE_COMMENT=41, BLOCK_COMMENT=42;
	public static final int
		RULE_promptFile = 0, RULE_promptDef = 1, RULE_promptBlock = 2, RULE_inputSection = 3, 
		RULE_outputSection = 4, RULE_outputEntry = 5, RULE_systemSection = 6, 
		RULE_userSection = 7, RULE_noteSection = 8, RULE_afterSection = 9, RULE_afterContent = 10, 
		RULE_afterEntry = 11, RULE_fieldDef = 12, RULE_textLine = 13, RULE_paramPath = 14, 
		RULE_structDef = 15, RULE_annotation = 16, RULE_annotationArgs = 17, RULE_annotationValue = 18, 
		RULE_arrayLiteral = 19, RULE_textBlock = 20, RULE_type = 21, RULE_value = 22, 
		RULE_formatType = 23;
	private static String[] makeRuleNames() {
		return new String[] {
			"promptFile", "promptDef", "promptBlock", "inputSection", "outputSection", 
			"outputEntry", "systemSection", "userSection", "noteSection", "afterSection", 
			"afterContent", "afterEntry", "fieldDef", "textLine", "paramPath", "structDef", 
			"annotation", "annotationArgs", "annotationValue", "arrayLiteral", "textBlock", 
			"type", "value", "formatType"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{'", "'}'", "'input'", "':'", "'='", "'.'", "'@'", "'('", "')'", 
			"','", "'['", "']'", "'-'", "'[]'", "'md'", "'json'", "'+'", null, "'string'", 
			"'float'", "'int'", "'prompt'", "'params'", "'system'", "'user'", "'note'", 
			"'in'", "'output'", "'format'", "'type'", "'struct'", "'schema'", "'after'", 
			null, null, null, null, "'|'", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "PLUS", "JAVASCRIPT_BLOCK", "STRING_TYPE", 
			"FLOAT_TYPE", "INT_TYPE", "PROMPT", "PARAMS", "SYSTEM", "USER", "NOTE", 
			"IN", "OUTPUT", "FORMAT", "TYPE", "STRUCT", "SCHEMA", "AFTER", "ID", 
			"STRING", "NUMBER", "BOOL", "PIPE", "SEMI", "WS", "LINE_COMMENT", "BLOCK_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PromptDSL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PromptDSLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PromptFileContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(PromptDSLParser.EOF, 0); }
		public List<PromptDefContext> promptDef() {
			return getRuleContexts(PromptDefContext.class);
		}
		public PromptDefContext promptDef(int i) {
			return getRuleContext(PromptDefContext.class,i);
		}
		public PromptFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_promptFile; }
	}

	public final PromptFileContext promptFile() throws RecognitionException {
		PromptFileContext _localctx = new PromptFileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_promptFile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(48);
				promptDef();
				}
				}
				setState(51); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==PROMPT );
			setState(53);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PromptDefContext extends ParserRuleContext {
		public TerminalNode PROMPT() { return getToken(PromptDSLParser.PROMPT, 0); }
		public TerminalNode ID() { return getToken(PromptDSLParser.ID, 0); }
		public List<PromptBlockContext> promptBlock() {
			return getRuleContexts(PromptBlockContext.class);
		}
		public PromptBlockContext promptBlock(int i) {
			return getRuleContext(PromptBlockContext.class,i);
		}
		public PromptDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_promptDef; }
	}

	public final PromptDefContext promptDef() throws RecognitionException {
		PromptDefContext _localctx = new PromptDefContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_promptDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			match(PROMPT);
			setState(56);
			match(ID);
			setState(57);
			match(T__0);
			setState(59); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(58);
				promptBlock();
				}
				}
				setState(61); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 8975810568L) != 0) );
			setState(63);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PromptBlockContext extends ParserRuleContext {
		public InputSectionContext inputSection() {
			return getRuleContext(InputSectionContext.class,0);
		}
		public OutputSectionContext outputSection() {
			return getRuleContext(OutputSectionContext.class,0);
		}
		public SystemSectionContext systemSection() {
			return getRuleContext(SystemSectionContext.class,0);
		}
		public UserSectionContext userSection() {
			return getRuleContext(UserSectionContext.class,0);
		}
		public NoteSectionContext noteSection() {
			return getRuleContext(NoteSectionContext.class,0);
		}
		public AfterSectionContext afterSection() {
			return getRuleContext(AfterSectionContext.class,0);
		}
		public PromptBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_promptBlock; }
	}

	public final PromptBlockContext promptBlock() throws RecognitionException {
		PromptBlockContext _localctx = new PromptBlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_promptBlock);
		try {
			setState(71);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
				enterOuterAlt(_localctx, 1);
				{
				setState(65);
				inputSection();
				}
				break;
			case OUTPUT:
				enterOuterAlt(_localctx, 2);
				{
				setState(66);
				outputSection();
				}
				break;
			case SYSTEM:
				enterOuterAlt(_localctx, 3);
				{
				setState(67);
				systemSection();
				}
				break;
			case USER:
				enterOuterAlt(_localctx, 4);
				{
				setState(68);
				userSection();
				}
				break;
			case NOTE:
				enterOuterAlt(_localctx, 5);
				{
				setState(69);
				noteSection();
				}
				break;
			case AFTER:
				enterOuterAlt(_localctx, 6);
				{
				setState(70);
				afterSection();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InputSectionContext extends ParserRuleContext {
		public List<FieldDefContext> fieldDef() {
			return getRuleContexts(FieldDefContext.class);
		}
		public FieldDefContext fieldDef(int i) {
			return getRuleContext(FieldDefContext.class,i);
		}
		public InputSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inputSection; }
	}

	public final InputSectionContext inputSection() throws RecognitionException {
		InputSectionContext _localctx = new InputSectionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_inputSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(T__2);
			setState(74);
			match(T__0);
			setState(76); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(75);
				fieldDef();
				}
				}
				setState(78); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			setState(80);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OutputSectionContext extends ParserRuleContext {
		public TerminalNode OUTPUT() { return getToken(PromptDSLParser.OUTPUT, 0); }
		public List<OutputEntryContext> outputEntry() {
			return getRuleContexts(OutputEntryContext.class);
		}
		public OutputEntryContext outputEntry(int i) {
			return getRuleContext(OutputEntryContext.class,i);
		}
		public OutputSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_outputSection; }
	}

	public final OutputSectionContext outputSection() throws RecognitionException {
		OutputSectionContext _localctx = new OutputSectionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_outputSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(OUTPUT);
			setState(83);
			match(T__0);
			setState(85); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(84);
				outputEntry();
				}
				}
				setState(87); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 5905580032L) != 0) );
			setState(89);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OutputEntryContext extends ParserRuleContext {
		public TerminalNode FORMAT() { return getToken(PromptDSLParser.FORMAT, 0); }
		public FormatTypeContext formatType() {
			return getRuleContext(FormatTypeContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(PromptDSLParser.SEMI, 0); }
		public TerminalNode TYPE() { return getToken(PromptDSLParser.TYPE, 0); }
		public TerminalNode ID() { return getToken(PromptDSLParser.ID, 0); }
		public TerminalNode STRUCT() { return getToken(PromptDSLParser.STRUCT, 0); }
		public List<FieldDefContext> fieldDef() {
			return getRuleContexts(FieldDefContext.class);
		}
		public FieldDefContext fieldDef(int i) {
			return getRuleContext(FieldDefContext.class,i);
		}
		public TerminalNode SCHEMA() { return getToken(PromptDSLParser.SCHEMA, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public OutputEntryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_outputEntry; }
	}

	public final OutputEntryContext outputEntry() throws RecognitionException {
		OutputEntryContext _localctx = new OutputEntryContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_outputEntry);
		int _la;
		try {
			setState(114);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FORMAT:
				enterOuterAlt(_localctx, 1);
				{
				setState(91);
				match(FORMAT);
				setState(92);
				match(T__3);
				setState(93);
				formatType();
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SEMI) {
					{
					setState(94);
					match(SEMI);
					}
				}

				}
				break;
			case TYPE:
				enterOuterAlt(_localctx, 2);
				{
				setState(97);
				match(TYPE);
				setState(98);
				match(ID);
				setState(99);
				match(STRUCT);
				setState(100);
				match(T__0);
				setState(102); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(101);
					fieldDef();
					}
					}
					setState(104); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==ID );
				setState(106);
				match(T__1);
				}
				break;
			case SCHEMA:
				enterOuterAlt(_localctx, 3);
				{
				setState(108);
				match(SCHEMA);
				setState(109);
				match(T__3);
				setState(110);
				type();
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SEMI) {
					{
					setState(111);
					match(SEMI);
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SystemSectionContext extends ParserRuleContext {
		public TerminalNode SYSTEM() { return getToken(PromptDSLParser.SYSTEM, 0); }
		public List<TextLineContext> textLine() {
			return getRuleContexts(TextLineContext.class);
		}
		public TextLineContext textLine(int i) {
			return getRuleContext(TextLineContext.class,i);
		}
		public SystemSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_systemSection; }
	}

	public final SystemSectionContext systemSection() throws RecognitionException {
		SystemSectionContext _localctx = new SystemSectionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_systemSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(SYSTEM);
			setState(117);
			match(T__0);
			setState(119); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(118);
				textLine();
				}
				}
				setState(121); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 2250965516288L) != 0) );
			setState(123);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UserSectionContext extends ParserRuleContext {
		public TerminalNode USER() { return getToken(PromptDSLParser.USER, 0); }
		public List<TextLineContext> textLine() {
			return getRuleContexts(TextLineContext.class);
		}
		public TextLineContext textLine(int i) {
			return getRuleContext(TextLineContext.class,i);
		}
		public UserSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_userSection; }
	}

	public final UserSectionContext userSection() throws RecognitionException {
		UserSectionContext _localctx = new UserSectionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_userSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(USER);
			setState(126);
			match(T__0);
			setState(128); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(127);
				textLine();
				}
				}
				setState(130); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 2250965516288L) != 0) );
			setState(132);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NoteSectionContext extends ParserRuleContext {
		public TerminalNode NOTE() { return getToken(PromptDSLParser.NOTE, 0); }
		public List<TextLineContext> textLine() {
			return getRuleContexts(TextLineContext.class);
		}
		public TextLineContext textLine(int i) {
			return getRuleContext(TextLineContext.class,i);
		}
		public NoteSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_noteSection; }
	}

	public final NoteSectionContext noteSection() throws RecognitionException {
		NoteSectionContext _localctx = new NoteSectionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_noteSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(NOTE);
			setState(135);
			match(T__0);
			setState(137); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(136);
				textLine();
				}
				}
				setState(139); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 2250965516288L) != 0) );
			setState(141);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AfterSectionContext extends ParserRuleContext {
		public TerminalNode AFTER() { return getToken(PromptDSLParser.AFTER, 0); }
		public AfterContentContext afterContent() {
			return getRuleContext(AfterContentContext.class,0);
		}
		public AfterSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_afterSection; }
	}

	public final AfterSectionContext afterSection() throws RecognitionException {
		AfterSectionContext _localctx = new AfterSectionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_afterSection);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(AFTER);
			setState(144);
			match(T__0);
			setState(145);
			afterContent();
			setState(146);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AfterContentContext extends ParserRuleContext {
		public List<AfterEntryContext> afterEntry() {
			return getRuleContexts(AfterEntryContext.class);
		}
		public AfterEntryContext afterEntry(int i) {
			return getRuleContext(AfterEntryContext.class,i);
		}
		public List<TerminalNode> PLUS() { return getTokens(PromptDSLParser.PLUS); }
		public TerminalNode PLUS(int i) {
			return getToken(PromptDSLParser.PLUS, i);
		}
		public TerminalNode JAVASCRIPT_BLOCK() { return getToken(PromptDSLParser.JAVASCRIPT_BLOCK, 0); }
		public AfterContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_afterContent; }
	}

	public final AfterContentContext afterContent() throws RecognitionException {
		AfterContentContext _localctx = new AfterContentContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_afterContent);
		int _la;
		try {
			setState(157);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(148);
				afterEntry();
				setState(153);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==PLUS) {
					{
					{
					setState(149);
					match(PLUS);
					setState(150);
					afterEntry();
					}
					}
					setState(155);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(156);
				match(JAVASCRIPT_BLOCK);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AfterEntryContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(PromptDSLParser.STRING, 0); }
		public TerminalNode JAVASCRIPT_BLOCK() { return getToken(PromptDSLParser.JAVASCRIPT_BLOCK, 0); }
		public AfterEntryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_afterEntry; }
	}

	public final AfterEntryContext afterEntry() throws RecognitionException {
		AfterEntryContext _localctx = new AfterEntryContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_afterEntry);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			_la = _input.LA(1);
			if ( !(_la==JAVASCRIPT_BLOCK || _la==STRING) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FieldDefContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PromptDSLParser.ID, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public List<AnnotationContext> annotation() {
			return getRuleContexts(AnnotationContext.class);
		}
		public AnnotationContext annotation(int i) {
			return getRuleContext(AnnotationContext.class,i);
		}
		public TerminalNode SEMI() { return getToken(PromptDSLParser.SEMI, 0); }
		public FieldDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldDef; }
	}

	public final FieldDefContext fieldDef() throws RecognitionException {
		FieldDefContext _localctx = new FieldDefContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_fieldDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			match(ID);
			setState(162);
			match(T__3);
			setState(163);
			type();
			setState(166);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(164);
				match(T__4);
				setState(165);
				value();
				}
			}

			setState(171);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__6) {
				{
				{
				setState(168);
				annotation();
				}
				}
				setState(173);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(175);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMI) {
				{
				setState(174);
				match(SEMI);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TextLineContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(PromptDSLParser.STRING, 0); }
		public TerminalNode LINE_COMMENT() { return getToken(PromptDSLParser.LINE_COMMENT, 0); }
		public ParamPathContext paramPath() {
			return getRuleContext(ParamPathContext.class,0);
		}
		public TextLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_textLine; }
	}

	public final TextLineContext textLine() throws RecognitionException {
		TextLineContext _localctx = new TextLineContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_textLine);
		try {
			setState(180);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case STRING:
				enterOuterAlt(_localctx, 1);
				{
				setState(177);
				match(STRING);
				}
				break;
			case LINE_COMMENT:
				enterOuterAlt(_localctx, 2);
				{
				setState(178);
				match(LINE_COMMENT);
				}
				break;
			case IN:
			case OUTPUT:
			case ID:
				enterOuterAlt(_localctx, 3);
				{
				setState(179);
				paramPath();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
